# paraview-superbuild

./: .gitattributes  .gitlab-ci.yml  .gitmodules  .kitware-release.json  BUGS.cmake  BUGS.txt  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  README.md  versions.cmake
.gitlab/: artifacts.yml  gitlab-ci-olcf.yml  os-linux.yml  os-macos.yml  os-windows.yml  rules.yml  upload.yml
.gitlab/ci/: cdash-groups.json  checkout_paraview.ps1  checkout_paraview.sh  cmake.ps1  cmake.sh  configure_cache.cmake  configure_centos7_egl.cmake  configure_common.cmake  configure_linux_common.cmake  configure_linux_egl.cmake  configure_linux_osmesa.cmake  configure_linux_osmesa_shared.cmake  configure_linux_osmesa_static.cmake  configure_linux_plain.cmake  configure_linux_shared.cmake  configure_linux_static.cmake  configure_macos.cmake  configure_macos_arm64.cmake  configure_macos_plain.cmake  configure_macos_x86_64.cmake  configure_sccache.cmake  configure_windows.cmake  configure_windows_vs2019_mpi.cmake  configure_windows_vs2019_nompi.cmake  configure_windows_vs2022_mpi.cmake  configure_windows_vs2022_nompi.cmake  ctest_build.cmake  ctest_configure.cmake  ctest_package.cmake  ctest_test.cmake  download_nsis.cmake  download_perl.cmake  download_qt.cmake  download_qt6.cmake  download_qt6_hashes.cmake  download_qt_hashes.cmake  gfortran.sh  gitlab_ci.cmake  ninja.sh  sccache.sh  (+2 more)
CMake/: CTestCustom.cmake.in  CrossCompilationMacros.cmake  DetermineParaViewVersion.cmake  DownloadIfNeeded.cmake  PVExternalProject.cmake  ParaViewModules.cmake  acusolve_plugin.cmake  boost.cmake  cgns.cmake  ffmpeg.cmake  fontconfig.cmake  freetype.cmake  hdf5.cmake  libxml2.cmake  manta.cmake  mesa.cmake  mili_plugin.cmake  mpich2.cmake  mpich2.use.system.cmake  nektar_plugin.cmake  numpy.cmake  paraview.cmake  paraview_version.cmake  pep_configure.cmake.in  png.cmake  python.cmake  qt.cmake  silo.cmake  szip.cmake  vistrails_plugin.cmake  zlib.cmake
CMake/Sites/: Cray-CLE6-Shared.cmake  Kitware-Andromeda-Shared.cmake  LANL-Cray.cmake  LANL-Linux-Shared.cmake
CMake/crosscompile/: add_cmake_files_to_python2-7-3.patch  patcher.sh  prep_mesa_cross.sh  python_modules.cmake
CMake/unix/: freetype.cmake  install_dependencies.cmake  paraview.bundle.cmake  vistrails_plugin.cmake
Projects/: acusolve.cmake  acusolve_plugin.cmake  boost.cmake  boost.use.system.cmake  bzip2.cmake  bzip2.use.system.cmake  cgns.cmake  cosmologytools.cmake  cosmotools.cmake  crossmesa.cmake  crossparaview.cmake  crosspython.cmake  curl.cmake  curl.use.system.cmake  diy.build.cmake  diy.cmake  egl.use.system.cmake  ffmpeg.cmake  genericio.cmake  hdf5.cmake  hdf5.use.system.cmake  install_acusolve.cmake  install_cosmologytools.cmake  install_nektar_plugin.cmake  install_vistrails.cmake  ispc.cmake  lapack.cmake  libxml2.cmake  manta.cmake  matplotlib.build.cmake  matplotlib.cmake  matplotlib.install  matplotlib.patch.cmake  matplotlib.use.system.cmake  mesa.cmake  mili_plugin.cmake  mpi.cmake  mpi.use.system.cmake  nektar_plugin.cmake  nektarreader.cmake  (+35 more)
Projects/apple/: bzip2.cmake  fixup_bundle.py  fixup_bundle_for_mountain_lion.py  fixup_bundle_for_mountain_lion2.py  fixup_plugin.py  manta.cmake  paraview.bundle.cmake  png.cmake  portfwd.cmake  python.cmake  zlib.cmake
Projects/apple-unix/: adios.cmake  adios.use.system.cmake  mxml.cmake  mxml.use.system.cmake
Projects/patches/: .gitattributes  bzip2.CMakeLists.txt  cgns.src.CMakeLists.txt  diy.src.diy.cpp  hdf5.config.cmake.ConfigureChecks.cmake  hdf5.src.H5public.h  manta.Core.CMakeLists.txt  manta.Core.Containers.Array3.h  manta.Core.Thread.Thread.cc  matplotlib.setup.cfg.in  matplotlib.setupext.py  mpi.ompi-1.4.4.CMakeLists.txt  mpi.ompi.CMakeLists.txt  ospray.CMakeLists.txt  ospray.FindTBB.cmake  qt4.src.plugins.accessible.widgets.itemviews.cpp  qt4.src.plugins.bearer.corewlan.corewlan.pro  qt5.qtbase.plugins.platforms.cocoa.qcocoaeventdispatcher.mm  szip.src.CMakeLists.txt
Projects/unix/: catalyst.bundle.cmake  catalyst.cmake  egl.cmake  freetype.cmake  install_dependencies.cmake  install_vistrails.cmake  llvm.cmake  mesa.cmake  osmesa.cmake  osmesa.use.system.cmake  paraview.bundle.cmake  paraviewsdk.cmake  vistrails_plugin.cmake
Projects/win32/: boost.cmake  bzip2.cmake  freetype-build.cmake  freetype.cmake  matplotlib.cmake  mpi.cmake  paraview.bundle.cmake  python.cmake  qt.cmake  qt.use.system.cmake  qt4.cmake  qt4.use.system.cmake  qt5.use.system.cmake  silo.build.cmake  silo.cmake  silo.configure.cmake  silo.install.cmake  silo.patch.cmake  szip.cmake  zlib.cmake
Scripts/: download-nightly-files.py  pvw-setup.py  setup-for-development.sh  setup-git-aliases
Scripts/Cray/: ERDC-Cray-Shared.PBSPro  LANL-Cray-Shared.Torque
Scripts/GitSetup/: config
Scripts/Sites/: Cray-PrgEnv-cross-compile.sh  Kitware-Andromeda-Shared.SGE  LANL-Cray-CLE6-Shared.sh  LANL-Cray-Shared.Torque
Testing/: CMakeLists.txt  PrepareBinaries.cmake  TestData-5blocks_cgns.xml  TestData-cs_silo.xml  TestFindData.xml  TestMatplotlib.xml  basic_python.py  tests.cmake
Utilities/: SetupForDevelopment.sh
Utilities/build-mesa/: CMakeLists.txt
cmake/: CTestCustom.cmake  ParaViewSuperbuildMacros.cmake
launchers/: CMakeLists.txt  launcher.cxx
projects/: abseil.cmake  acusolve.cmake  adios2.cmake  adios2.system.cmake  blosc.cmake  blosc.system.cmake  blosc2.cmake  blosc2.system.cmake  catalyst.cmake  catalyst.system.cmake  cdi.cmake  cgns.cmake  cinemaexport.cmake  collaborationserver.cmake  cppzmq.cmake  cuda.cmake  curl.cmake  curl.system.cmake  cxx14.cmake  diy.cmake  eigen.cmake  eigen.system.cmake  embree.cmake  fides.cmake  gdal.cmake  geotiff.cmake  h5py.cmake  ispc.cmake  jsonc.cmake  las.cmake  launchers.cmake  lookingglass.cmake  manta.cmake  matplotlib.cmake  medconfiguration.cmake  medcoupling.cmake  medfile.cmake  medreader.cmake  meson.cmake  ninja.cmake  (+59 more)
tests/: CMakeLists.txt  TestData.xml  TestFindData.xml  TestMatplotlib.xml  TestUI.xml  basic_paraviewweb.py  paraview.test.cmake  paraview.test.web.cmake  paraviewsdk.test.cmake  paraviewtranslations.cmake  tests.cmake
(+392 files in other folders)
